--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: "comic-sans";
+    src: url('/fonts/comic.ttf');
+}
+
 .todo {
     cursor: pointer;
     list-style-type: none;
@@ -9,4 +14,17 @@
 
 .todo.incomplete {
     text-decoration: none;
+}
+
+#vapor {
+    max-width: 200px;
+    display: inline-block;
+    float: right;
+    margin-bottom: 10px;
+}
+
+body {
+    font-family: "comic-sans";
+    background-image: url("/images/vapor_2.jpg");
+    background-repeat: repeat;
 }
