Added dispatching for completing a todo, on the front end only.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,9 +11,11 @@
     text-decoration: none;
 }
 
+h1 {
+    margin: 0;
+}
 #vapor {
     max-width: 200px;
-    display: inline-block;
-    float: right;
+    display: block;
     margin-bottom: 10px;
 }
