--- a/public/css/style.css
+++ b/public/css/style.css
@@ -27,6 +27,12 @@ h2 {
     padding-top: 4px;
     padding-bottom: 4px;
     border-bottom: 1px solid;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 .todo.completed {
