--- a/public/css/style.css
+++ b/public/css/style.css
@@ -72,15 +72,25 @@ header {
     text-decoration: none;
 }
 
+.add-todo-btn {
+    font-size: 1.25rem;
+    cursor: pointer;
+    padding-left: 5px;
+}
+
 footer {
     margin-top: 30px;
     padding-top: 20px;
-    padding-bottom: 50px;
+    padding-bottom: 30px;
     background: #DDD;
 }
 
 footer, footer a {
     color: #777;
+}
+
+.icon-link {
+    margin-right: 7px;
 }
 
 ::selection {
