--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,7 +9,7 @@ body {
 }
 
 h1, h2 {
-    padding: 10px;
+    padding: 10px 0 10px 0;
     color: white;
 }
 
@@ -25,13 +25,9 @@ h2 {
 
 header {
     background: 
-        url('http://i.imgur.com/DiRyV9q.gif') 40vw 140px no-repeat,
-        linear-gradient(
-          rgba(0, 0, 0, 0.2), 
-          rgba(0, 0, 0, 0.2)
-        ),
-        url('http://i.imgur.com/JxiP2IB.jpg') center;
-    min-height: 300px;
+        url('http://i.imgur.com/DiRyV9q.gif') 50vw 30px no-repeat,
+        url('http://i.imgur.com/gcZ30s9.png') center;
+    min-height: 200px;
     padding: 30px;
     margin-bottom: 20px;
 }
